--- a/foundry.toml
+++ b/foundry.toml
@@ -10,3 +10,6 @@ remappings = [
 [rpc_endpoints]
 sepolia = "${SEPOLIA_RPC_URL}"
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[invariant]
+fail_on_revertruns = 128
+depth = 128
