--- a/foundry.toml
+++ b/foundry.toml
@@ -11,5 +11,6 @@ remappings = [
 sepolia = "${SEPOLIA_RPC_URL}"
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 [invariant]
-fail_on_revertruns = 128
+runs = 128
 depth = 128
+fail_on_revert = true
