--- a/foundry.toml
+++ b/foundry.toml
@@ -13,4 +13,4 @@ sepolia = "${SEPOLIA_RPC_URL}"
 [invariant]
 runs = 128
 depth = 128
-fail_on_revert = true #it's good to aim for this
+fail_on_revert = false #it's good to aim for this
